--- a/omniisaacgymenvs/cfg/train/Cartpole_juhan_testPPO.yaml
+++ b/omniisaacgymenvs/cfg/train/Cartpole_juhan_testPPO.yaml
@@ -22,7 +22,7 @@ params:
           val: 0
         fixed_sigma: True
     mlp:
-      units: [48, 48]
+      units: [64, 64]
       activation: elu
       
       initializer:
@@ -54,7 +54,7 @@ params:
     lr_schedule: adaptive
     kl_threshold: 0.008
     score_to_win: 20000
-    max_epochs: ${resolve_default:100,${....max_iterations}}
+    max_epochs: 300
     save_best_after: 50
     save_frequency: 25
     grad_norm: 1.0
@@ -63,6 +63,7 @@ params:
     e_clip: 0.2
     horizon_length: 16
     minibatch_size: 8192
+    # minibatch_size: 2
     mini_epochs: 8
     critic_coef: 4
     clip_value: True
